@startuml

class StreamingPlatform{
- String appName
- ArrayList<User> users
- ArrayList<Media> medias
+ Chill(String appName)


+ getters/setter()
+ login(String userName, String password)
+ loadUsers()
+ loadMedias()
+ interfaceLoop
+ static void main(String[] args)
}

class User{
- String username
- String password
- int birthdayYear
- String gender
- ArrayList<Media> seen
- ArrayList<Media> saved
- int id
- static int idCount

+ User(String username, String password, String birthdayYear, String gender)
+ getters/setter()

}

package "util"{

class TextUI{
- Scanner scan

+ void displayMSG(String msg)
+ String promptText (String msg)
+ int promptNumeric (String msg))
}

class FileIO{
+ ArrayList<String> readUserData(String path)
+ void saveData(ArrayList<User> users, String path)
+ String[] readMediaData(String path, int length)
}

}

abstract class Media{
- String mediaName
- int releaseYear
- String genre
- float IMDBScore

+ Media( String mediaName, int releaseYear, String genre, float IMDBScore)
+ playMedia(String mediaName)
+ addMediaToList()
+ removeMediaFromList()
}

class Movie extends Media{
+ Movie(super)
}

class Series extends Media{
+ Series(super)
}

class Season{
- int seasonID
+ Season(super)
}

class Episode extends Media{
-int episodeID
+ Episode(super)
}

StreamingPlatform *-- Media

User *-- Media

StreamingPlatform *-- User

Series *-- Season

Season *-- Episode


@enduml